crates/glyph-cli/tests/corpus/invalid/imports/selective_value_alias_pascal_case.glyph
import "./aliased_value_lib.glyph" { mode_name as ModeName }

skill main()
    description: "Value alias forced to PascalCase — illegal."
    flow:
        ModeName()
